--- a/Gaussian p >> N.ipynb
+++ b/Gaussian p >> N.ipynb
@@ -2,19 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.grid_search import GridSearchCV\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def generate_test_data(N, p):\n",
+    "    features = pd.DataFrame(np.random.randn(N, p))\n",
+    "\n",
+    "    b = np.random.normal(size = p)\n",
+    "\n",
+    "    Y = features.apply(lambda row: sum(row * b), axis = 1)\n",
+    "\n",
+    "    features['Y'] = Y\n",
+    "\n",
+    "    return features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
@@ -23,39 +47,112 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.61601397  0.94300863]\n",
-      "          0         1         Y\n",
-      "0 -0.124922  1.089229  1.104107\n",
-      "1 -2.783634 -0.353865  1.381059\n",
-      "2  1.065299  0.451804 -0.230185\n",
-      "3 -0.434774 -0.145533  0.130588\n",
-      "4  1.047766 -0.310704 -0.938435\n",
-      "5  0.391367 -1.043613 -1.225224\n",
-      "6  0.383880  0.802936  0.520700\n",
-      "7  0.565641 -0.699623 -1.008193\n",
-      "8  0.202600 -1.411970 -1.456304\n",
-      "9  0.599653  0.156858 -0.221476\n"
+      "for N = 100, p = 20, alpha = 0.001 and mse = 3.42443841933e-08\n",
+      "for N = 100, p = 100, alpha = 0.001 and mse = 21.0564402557\n",
+      "for N = 100, p = 1000, alpha = 1000 and mse = 1152.55798073\n"
      ]
     }
    ],
    "source": [
-    "N = 10\n",
-    "p = 2\n",
+    "for p in [20, 100, 1000]:\n",
+    "    N = 100\n",
+    "    data = generate_test_data(N, p)\n",
     "\n",
-    "features = pd.DataFrame(np.random.randn(N, p))\n",
+    "    train, test = train_test_split(data, train_size = 0.7)\n",
     "\n",
-    "b = np.random.normal(size = p)\n",
+    "#     params = {'alpha': np.logspace(-10, 10, 50)}\n",
+    "    params = {'alpha': [0.001, 100, 1000]}\n",
+    "    model = Ridge()\n",
+    "    estimator = GridSearchCV(model, params)\n",
     "\n",
-    "Y = features.apply(lambda row: sum(row * b), axis = 1)\n",
+    "    estimator.fit(train.drop('Y', axis = 1), train['Y']) \n",
+    "    \n",
+    "    y_pred = estimator.predict(test.drop('Y', axis = 1))\n",
+    "    y_true = test['Y']\n",
     "\n",
-    "features['Y'] = Y\n"
+    "    print \"for N = {}, p = {}, alpha = {} and mse = {}\".format(N, \n",
+    "                                                               p, \n",
+    "                                                               estimator.best_params_['alpha'], \n",
+    "                                                               mean_squared_error(y_true, y_pred))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
